--- a/.htaccess
+++ b/.htaccess
@@ -11,3 +11,12 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.html [NC,L,QSA]
 </IfModule>
+
+<IfModule mod_autoindex.c>
+IndexIgnore */*
+Options -Indexes
+</IfModule>
+
+<IfModule mod_alias.c>
+RedirectMatch 403 ^/.git(/.*)?$
+</IfModule>
